[package]
name = "file-search"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bincode = "2.0.1"
clap = { version = "4.5.40", features = ["derive"] }
redb = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tantivy = "0.24.1"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
